Added delete API end point and implement Redis